# simple_config

./: CMakeLists.txt  README.md
cmake/: common.cmake  nlohmann_json.cmake  simple_color.cmake
include/simple_config/: config.h
src/: config.cpp
test/: CMakeLists.txt  test_simple_config.cpp
